# AMED

./: .gitattributes  .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  TERMINOLOGIES.txt  TODO.txt
examples/: example1.c  example2.c  example3.c
generator/: AArch32.pm  AArch64.pm  ARM.pm  AutoGenNotice.pm  Base.pm  DecisionTree.pm  Dictionary.pm  Enum.pm  Sequence.pm  Shared.pm  Utils.pm  X86.pm
generator/Binary/: Utils.pm
generator/CExpression/: Grammar.eyp  Lexer.pl  MaskBits.pm  Parser.pm  Printer.pm  Transformer.pm  Utils.pm  Visitor.pm  compile.bat
include/: amed.h
include/amed/: aarch32.h  aarch64.h  decoder.h  printer.h  strings.h  x86.h
include/amed/aarch32/: decoder.h  optional-strings.h  printer.h  strings.h
include/amed/aarch32/include/: enums.inc
include/amed/aarch64/: decoder.h  optional-strings.h  printer.h  strings.h
include/amed/aarch64/include/: enums.inc
include/amed/shared/: enums.inc
include/amed/x86/: decoder.h  optional-strings.h  printer.h  strings.h
include/amed/x86/include/: enums.inc
scripts/: header.pl
source/: armimm.c  armimm.h  decoder.c  printer.c  shared-strings.c  strings.inc
source/aarch32/: db.h  decoder.c  optional-strings.c  printer.c  sed.h  strings.c
source/aarch32/include/: aliasconds.inc  aliases.inc  argument.inc  arguments.inc  bitdiffs.inc  encodedins.inc  encodings.inc  iflags.inc  iform2mnem.inc  lookup-a32.inc  lookup-t16.inc  lookup-t32.inc  optional-strings.inc  reginfo.inc  strings.inc  tables.inc  templates.inc
source/aarch64/: db.h  decoder.c  optional-strings.c  printer.c  sed.c  sed.h  strings.c  sysop.inc  sysop.pl  sysop.txt
source/aarch64/include/: aliasconds.inc  aliases.inc  argument.inc  arguments.inc  bitdiffs.inc  encodedins.inc  encodings.inc  iflags.inc  iform2mnem.inc  lookup-a64.inc  optional-strings.inc  reginfo.inc  strings.inc  tables.inc  templates.inc  widths.inc
source/utils/: binary.h  datatype.h
source/x86/: db.h  decoder.c  optional-strings.c  printer.c  sed.c  sed.h  strings.c
source/x86/include/: aliasconds.inc  aliases.inc  argument.inc  arguments.inc  bitdiffs.inc  encodings.inc  iflags.inc  iform2mnem.inc  lookup-x86.inc  optional-strings.inc  reginfo.inc  strings.inc  tables.inc  templates.inc  widths.inc
test/db/x86/: AVX2.pl  AVX2GATHER.pl  AVX512CD_512.pl  AVX512ER_512.pl  AVX512F_128N.pl  AVX512F_512.pl  AVX512F_KOP.pl  AVX512F_SCALAR.pl  AVX512PF_512.pl  CMOV.pl  I186.pl  I386.pl  I486REAL.pl  I86.pl  LONGMODE.pl  PREFETCHWT1.pl  SSE.pl  SSE2.pl  SSE42.pl  SSEMXCSR.pl  X87.pl
